# RRCWT

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/: rrcwt.yml
.github/workflows/: rrcwt.yml
direct/: Cargo.toml  build.rs
direct/lib/: io.cpp  rcwtlib.h  task.cpp
direct/src/: main.rs
driver/: Cargo.toml
driver/lib/: hash.cpp  hello.cpp  io.cpp  librcwt.h  rcwtlib.h
driver/src/: main.rs
examples/: arith.yml  array.yml  err.grp  factorial.grp  float.yml  fn.yml  hello.grp  hello.yml  logic.yml  loop.yml  main.wc  sub.wc
incremental/src/ast/: Assign.java  BinaryOperator.java  BooleanLiteral.java  CharacterLiteral.java  Closure.java  Else.java  Expression.java  FloatLiteral.java  FunctionCall.java  FunctionDeclare.java  If.java  IntegerLiteral.java  Node.java  Number.java  Operator.java  Print.java  Return.java  Sequence.java  Statement.java  StringLiteral.java  String_.java  Temporary.java  UnaryOperator.java  VariableCall.java  While.java
incremental/src/back_end/: Builder.java
incremental/src/driver/: Driver.java
incremental/src/front_end/: LocalVariable.java  (+4 more)
rcwt/: Cargo.toml  build.rs  desktop.ini
rcwt/src/: gen.rs  lib.rs  main.rs
rlisp/: Cargo.toml
rlisp/src/: ast.rs  compiler.rs  disp.rs  error.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
src/: lib.rs  main.rs
src/c/: core.c  env.h  native.c  vm.h
src/front_end/: compiler.rs  disp.rs  error.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
src/native/: linux.rs  mod.rs
src/vm/: core.rs  jit.rs  linux.rs  ll.rs  mod.rs  windows.rs
(+45 files in other folders)
