[package]
name = "direct"
version = "0.1.0"
authors = ["29-pc09 <iamskyrabbit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"

[build-dependencies]
cc = "1.0.52"
